clusters/staging/traefik-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ui-ingress-traefik
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-traefik
      #    traefik.ingress.kubernetes.io/router.entrypoints: websecure
#    cert-manager.io/cluster-issuer: grafana-dev-selfsigned
spec:
  ingressClassName: traefik-traefik
  rules:
    - host: dashboard.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9100
